--- a/package.json
+++ b/package.json
@@ -48,12 +48,16 @@
     "@feathersjs/transport-commons": "^4.5.3",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "dauria": "^2.0.0",
     "feathers-authentication-hooks": "^1.0.2",
+    "feathers-blob": "^2.2.0",
     "feathers-hooks-common": "^5.0.2",
     "feathers-mongoose": "^8.3.0",
+    "fs-blob-store": "^5.2.1",
     "helmet": "^3.21.2",
     "mongodb-core": "^3.2.7",
     "mongoose": "^5.8.13",
+    "multer": "^1.4.2",
     "serve-favicon": "^2.5.0",
     "winston": "^3.0.0"
   },
